@@ -1,6 +1,8 @@
 dpkg (1.14.2) UNRELEASED; urgency=low
 
   * Remove bashisms in dpkg-buildpackage. Closes: #422239
+  * Handle case in update-alternatives when there's no existing alternative
+    to configure. Closes: #260987, #353252, #367717, #392431
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
 
