@@ -1,5 +1,13 @@
 2007-05-09  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl (config_message): Handle the case
+	when @versions is empty. Return a negative value if there's nothing to
+	do, 0 on success.
+	(config_alternatives): Check for config_message exit value to decide
+	to return instead of @versions being empty.
+
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-buildpackage.sh: Remove check for variable being empty,
 	as the path check quoted, thus removing the bashisms.
 
